# nanopb

./: .bazelignore  .clang-tidy  .gitattributes  .gitignore  .travis.yml  AUTHORS  AUTHORS.txt  BUILD  BUILD.bazel  CHANGELOG  CHANGELOG.txt  CMakeLists.txt  CNAME  LICENSE  MODULE.bazel  Package.swift  README  README.md  README.txt  WORKSPACE  check_pkg_resources.sh  conanfile.py  config.h.in  config.h.template  library.json  library.properties  meson.build  meson_options.txt  nanopb.podspec  pb.h  pb_common.c  pb_common.h  pb_config_example.h  pb_decode.c  pb_decode.h  pb_decode_fast.h  pb_encode.c  pb_encode.h  pyproject.toml  requirements.txt
.github/workflows/: arduino_cli.yml  bazel.yml  binary_packages.yml  cifuzz.yml  cmake.yml  codeql-buildscript.sh  codeql.yml  compiler_tests.yml  config_tests.yml  docker-image.yml  fail_on_error.py  fil-c.yml  ios_swift.yml  ios_swift_tests.yml  meson.yml  olddistro_tests.yml  platformio.yaml  platformio_tests.yml  pypi_publish.yml  python2_tests.yml  simulator_tests.yml  spm.yml  tests.yml  trigger_on_code_change.yml  trigger_on_schedule.yml
SwiftPackage/: module.modulemap  nanopb.h
build-tests/: README.md
build-tests/cmake_relpath/: CMakeLists.txt  simple.c
build-tests/cmake_with_components/: CMakeLists.txt  simple.cpp
build-tests/conan_dependency/: CMakeLists.txt
build-tests/conan_dependency/src/: simple.c
build-tests/legacy_cmake_relpath/: CMakeLists.txt  simple.c
build-tests/legacy_cmake_simple/: CMakeLists.txt  simple.c
build-tests/meson_simple/: meson.build  simple.c
build-tests/platformio/: test_platformio_generator.py
build-tests/spm-objc/: c-header.c
cmake/: FindNanopb.cmake
compat/: pb_syshdr.h
conan-wrapper/: CMakeLists.txt
docs/: CNAME  Makefile  SUMMARY.md  bazel_build.md  book.toml  build_bazel.md  build_cmake.md  build_conan.md  build_makefile.md  build_platformio.md  concepts.md  concepts.rst  encoding.rst  feedback.html  generator.md  index.md  index.rst  installation.md  lsr.css  mdbook_crossrefs.js  menu.rst  migration.md  migration.rst  reference.md  reference.rst  reference_buildopt.md  reference_generator.md  reference_pb_common_h.md  reference_pb_decode_h.md  reference_pb_encode_h.md  reference_pb_h.md  security.md  security.rst  tutorial.md  whats_new.md  whats_new.rst
docs/internals/: encoding.md
example/: Makefile  client.c  common.c  fileproto.proto  server.c
example_avr_double/: Makefile  README.txt  doubleproto.proto
example_unions/: Makefile  decode.c  unionproto.proto
examples/bazel_simple/: BUILD  WORKSPACE  example2.h
examples/bytes_pointer/: README.txt  simple  simple.c  simple.proto
examples/c_style/: Makefile  README.txt  c_style.c  c_style.proto
examples/cmake_fetchcontent/: CMakeLists.txt  README.txt
examples/cmake_relpath/: CMakeLists.txt
examples/cmake_simple/: CMakeLists.txt  README.txt  simple.c  simple.proto
examples/conan_dependency/: Makefile  README.md  conanfile.py
examples/lowlevel/: Makefile  README.txt  decode.c  encode.c
examples/network_server/: Makefile  README.txt  client.c  common.c  common.h  fileproto.options  fileproto.proto  server.c
examples/platformio/: .gitignore  platformio.ini
examples/simple/: Makefile  README  README.txt  requirements.txt  simple.c
examples/using_double_on_avr/: Makefile
examples/using_union_messages/: Makefile  decode.c  encode.c
extra/: FindNanopb.cmake  nanopb-config-version.cmake.in  nanopb-config.cmake  nanopb.mk  nanopb.pc.in  pb_syshdr.h  requirements.txt  requirements_lock.txt
extra/bazel/: BUILD.bazel  nanopb_cc_proto_library.bzl  nanopb_deps.bzl  nanopb_workspace.bzl  protoc-gen-nanopb-bazel.py  python_deps.bzl  rules_proto_grpc.patch
extra/poetry/: poetry_build.sh  pyproject.toml
extra/script_wrappers/: nanopb_generator.py  nanopb_generator.py.in
generator/: BUILD  Makefile  camel_case_splitter.py  nanogrpc_generator.py  nanopb.proto  nanopb_generator  nanopb_generator.bat  nanopb_generator.py  nanopb_pb2.py  platformio_generator.py  plugin_pb2.py  protoc  protoc-gen-grpc  protoc-gen-nanopb  protoc-gen-nanopb-bazel  protoc-gen-nanopb.bat  protoc.bat
generator/nanopb/: Makefile  options.proto
generator/nanopb_proto/: __init__.py  _utils.py  nanopb.proto
generator/proto/: BUILD  Makefile  __init__.py  _utils.py  nanopb.proto  plugin.proto
include/nanopb/: pb_common.h  pb_config_example.h  pb_decode.h  pb_encode.h
nanogrpc/: README.md  makeProtos.mk  nanogrpc.c  nanogrpc.h  nanogrpc.ng.c  nanogrpc.ng.h  nanogrpc.options  nanogrpc.proto  ng.h  ng_server.c  ng_server.h
nanogrpc/temp/: api.ng.c  api.ng.h  api.options  api.pb.c  api.pb.h  api.proto
rules/: BUILD  nanopb_proto_compile.bzl  nanopb_proto_library.bzl
spm-test/objc/: c-header.c  obc-qualified.m  objc-header.m  objc-qualified.m
spm-test/swift/: main.swift
spm_headers/: pb.h  pb_common.h  pb_decode.h  pb_encode.h
spm_headers/nanopb/: pb.h  pb_common.h  pb_decode.h  pb_encode.h
src/: pb_common.c  pb_decode.c  pb_encode.c
tests/: Makefile  SConstruct  alltypes.proto  bc_alltypes.pb.c  bc_alltypes.pb.h  bc_encode.c  callbacks.proto  decode_unittests.c  encode_unittests.c  extensions.proto  options.expected  options.proto  person.proto  person_with_extra_field.pb  person_with_extra_field.txt  test_decode1.c  test_decode2.c  test_decode3.c  test_decode_callbacks.c  test_decode_extensions.c  test_encode1.c  test_encode2.c  test_encode3.c  test_encode_callbacks.c  test_encode_extensions.c  test_missing_fields.c  testperson.pb  unittestproto.proto
tests/alltypes/: SConscript  alltypes.options  alltypes.proto  decode_alltypes.c  encode_alltypes.c
tests/alltypes_callback/: SConscript  alltypes.options  decode_alltypes_callback.c  encode_alltypes_callback.c
tests/alltypes_cxx/: SConscript  decode_alltypes.cpp  encode_alltypes.cpp
tests/alltypes_pointer/: SConscript  alltypes.options  decode_alltypes_pointer.c  encode_alltypes_pointer.c
tests/common/: SConscript  (+8 more)
tools/: make_linux_package.sh  make_mac_package.sh  make_windows_package.sh  nanopb_api_updater.py  set_version.sh
zephyr/: module.yml
(+431 files in other folders)
