load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@python_versions//3.11:defs.bzl", "py_binary")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
load("@protobuf//bazel/toolchains:proto_lang_toolchain.bzl", "proto_lang_toolchain")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//extra/bazel:nanopb_cc_proto_library.bzl", "cc_nanopb_proto_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE.txt"])

cc_library(
    name = "nanopb_compilation_options_default",
)

label_flag(
    name = "nanopb_compilation_options",
    build_setting_default = ":nanopb_compilation_options_default",
)

cc_library(
    name = "nanopb",
    srcs = [
        "pb_common.c",
        "pb_decode.c",
        "pb_encode.c",
    ],
    hdrs = [
        "pb.h",
        "pb_common.h",
        "pb_decode.h",
        "pb_encode.h",
    ],
    visibility = ["//visibility:public"],
    deps = [":nanopb_compilation_options"],
)

py_binary(
    name = "protoc-gen-nanopb",
    srcs = glob([
        "generator/**/*.py",
    ]) + [
        "//extra/bazel:protoc-gen-nanopb-bazel.py",
    ],
    data = glob([
        "generator/**/*.proto",
    ]),
    imports = [
        "generator",
    ],
    main = "//extra/bazel:protoc-gen-nanopb-bazel.py",
    deps = [
        ":nanopb_py_proto",
    ],
)

string_flag(
    name = "nanopb_extension",
    build_setting_default = ".pb",
    values = [
        ".pb",
        ".nanopb",
    ],
)

config_setting(
    name = "nanopb_extension_default",
    flag_values = {
        ":nanopb_extension": ".pb",
    },
)

config_setting(
    name = "nanopb_extension_nanopb",
    flag_values = {
        ":nanopb_extension": ".nanopb",
    },
)

proto_lang_toolchain(
    name = "nanopb_proto_toolchain",
    command_line = "--nanopb_out=$(OUT)",
    mnemonic = "NanopbProtoc",
    plugin = ":protoc-gen-nanopb",
    plugin_format_flag = "--plugin=protoc-gen-nanopb=%s",
    progress_message = "Generating nanopb sources for %{label}",
    runtime = ":nanopb",
    # Also creates :nanopb_proto_toolchain_toolchain, registered in MODULE.bazel.
    toolchain_type = "//extra/bazel:toolchain_type",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "nanopb_proto",
    srcs = [
        "generator/proto/nanopb.proto",
    ],
    strip_import_prefix = "generator/proto/",
    deps = ["@protobuf//:descriptor_proto"],
)

py_proto_library(
    name = "nanopb_py_proto",
    deps = [":nanopb_proto"],
)

cc_nanopb_proto_library(
    name = "test_compilation",
    defines = ["PB_FIELD_32BIT"],
    protos = ["@protobuf//:descriptor_proto"],
    visibility = ["//visibility:private"],
)

proto_library(
    name = "all_types_proto",
    srcs = ["tests/alltypes/alltypes.proto"],
)

cc_nanopb_proto_library(
    name = "all_types_nanopb",
    nanopb_options_files = ["tests/alltypes/alltypes.options"],
    protos = [":all_types_proto"],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "bazel_options_support",
    srcs = ["tests/bazel_options_support/bazel_options_support.cc"],
    copts = select({
        ":nanopb_extension_nanopb": ["-DUSE_NANOPB_EXTENSION_NAME"],
        ":nanopb_extension_default": [],
    }),
    deps = [":all_types_nanopb"],
)

# Run `bazel run //:requirements.update` if you want to update the requirements.
compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "extra/requirements.txt",
    requirements_txt = "extra/requirements_lock.txt",
)
