module(
    name = "nanopb",
    version = "0.4.9",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_python", version = "0.35.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "protobuf", version = "28.2")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

PYTHON_VERSION = "3.11"

# No need for this since rules_python already creates our version.
# python.toolchain(python_version = PYTHON_VERSION)
use_repo(python, "python_versions")

use_repo(pip, "nanopb_pypi")
pip.parse(
    hub_name = "nanopb_pypi",
    python_version = PYTHON_VERSION,
    requirements_lock = "@nanopb//:extra/requirements_lock.txt",
)
